# application/controllers/MessageController.go
@@ -1,32 +1,40 @@
 package controllers
 
 import (
-	"xapimanager/application/Services"
-	"xapimanager/application/common"
-	"xapimanager/application/models"
 	"github.com/gin-gonic/gin"
+	"github.com/gookit/color"
 	"net/http"
 	"strings"
 	"time"
+	"xapimanager/application/Services"
+	"xapimanager/application/common"
+	"xapimanager/application/models"
 )
 
 var limit = 20
 
-//消息列表
-func MessageList(c *gin.Context) {
-
-	c.HTML(http.StatusOK, "message_list.html", gin.H{
-		"website": Services.GetWebsite(),
-	})
-}
-
-//消息列表 Api
+//
+// @Summary 消息列表 Api
+// @Description 描述信息
+// @Tags message
+// @Accept  json
+// @Produce  json
+// @Router /message/list [get]
 func GetAjaxMessageList(c *gin.Context) {
 	//获取用户信息
 	var sender string
-	userInfo, _ := c.Get("user")
+	userContext, exist := c.Get("user")
+	if !exist {
+		color.Danger.Println("失败了")
+	}
+	//查询用户组及该组的功能权限
+	user, ok := userContext.(models.QyUser)
+	if !ok {
+
+		color.Danger.Println("断言失败")
+	}
 	data := map[string]interface{}{
-		"receiver": userInfo.(map[string]interface{})["uid"].(int),
+		"receiver": user.Uid,
 	}
 	//查询消息列表
 	page := common.StringToInt(c.DefaultQuery("page", "1"))
@@ -58,15 +66,38 @@ func GetAjaxMessageList(c *gin.Context) {
 	})
 }
 
-//更新已读和删除，
+type MessageOper struct {
+	Status int    `json:"status"`
+	Mids   string `json:"mids"`
+}
+
+// @Summary 更新已读和删除，
+// @Description 描述信息
+// @Tags message
+// @Accept  json
+// @Produce  json
+// @Router /message/operate [post]
 func MessageOperate(c *gin.Context) {
 
 	var flag bool
 	//获取用户信息
-	userInfo, _ := c.Get("user")
-	uid := userInfo.(map[string]interface{})["uid"].(int)
-	mids := strings.Split(c.PostForm("mids"), ",")
-	status := common.StringToInt(c.PostForm("status"))
+	userContext, exist := c.Get("user")
+	if !exist {
+		color.Danger.Println("失败了")
+	}
+	//查询用户组及该组的功能权限
+	user, ok := userContext.(models.QyUser)
+	if !ok {
+
+		color.Danger.Println("断言失败")
+	}
+	req := MessageOper{}
+	if err := c.ShouldBindJSON(&req); err != nil {
+		color.Red.Println(err)
+	}
+	uid := user.Uid
+	mids := strings.Split(req.Mids, ",")
+	status := req.Status
 
 	switch status {
 	case 1: //更新为已读
@@ -88,13 +119,28 @@ func MessageOperate(c *gin.Context) {
 
 }
 
-//消息详情
+//
+// @Summary 消息详情
+// @Description 描述信息
+// @Tags message
+// @Accept  json
+// @Produce  json
+// @Router /message/detail [get]
 func MessageDetail(c *gin.Context) {
 
 	var sender string
 	//获取用户信息及详细详情
-	userInfo, _ := c.Get("user")
-	uid := userInfo.(map[string]interface{})["uid"].(int)
+	userContext, exist := c.Get("user")
+	if !exist {
+		color.Danger.Println("失败了")
+	}
+	//查询用户组及该组的功能权限
+	user, ok := userContext.(models.QyUser)
+	if !ok {
+
+		color.Danger.Println("断言失败")
+	}
+	uid := user.Uid
 	mid := common.StringToInt(c.Param("mid"))
 	detail := models.GetMessageDetail(uid, mid)
 	sender = detail.Username
@@ -110,17 +156,32 @@ func MessageDetail(c *gin.Context) {
 		"sendtime": time.Unix(int64(detail.Sendtime), 0).Format("2006-01-02 03:04:05"),
 	}
 
-	c.HTML(http.StatusOK, "message_detail.html", gin.H{
+	c.JSON(http.StatusOK, gin.H{
 		"website": Services.GetWebsite(),
 		"data":    data,
 	})
 }
 
-//获取未读消息数
+//
+// @Summary 获取未读消息数
+// @Description 描述信息
+// @Tags message
+// @Accept  json
+// @Produce  json
+// @Router /message/unread [get]
 func GetUnreadMessage(c *gin.Context) {
 
-	userInfo, _ := c.Get("user")
-	uid := userInfo.(map[string]interface{})["uid"].(int)
+	userContext, exist := c.Get("user")
+	if !exist {
+		color.Danger.Println("失败了")
+	}
+	//查询用户组及该组的功能权限
+	user, ok := userContext.(models.QyUser)
+	if !ok {
+
+		color.Danger.Println("断言失败")
+	}
+	uid := user.Uid
 	count := models.GetUnreadMessage(uid)
 	c.JSON(http.StatusOK, gin.H{
 		"status":  200,
