# application/controllers/SysController.go
@@ -1,32 +1,63 @@
 package controllers
 
 import (
+	"github.com/gin-gonic/gin"
+	"github.com/gookit/color"
+	"net/http"
 	"xapimanager/application/Services"
 	"xapimanager/application/models"
-	"github.com/gin-gonic/gin"
-	"net/http"
 )
 
-//获取网站设置页
+// @Summary 获取网站设置页
+// @Description 描述信息
+// @Tags website
+// @Accept  json
+// @Produce  json
+// @Router /website/web [get]
 func Website(c *gin.Context) {
 
-	c.HTML(http.StatusOK, "website.html", gin.H{
+	c.JSON(http.StatusOK, gin.H{
 		"website": Services.GetWebsite(),
 		"site":    models.GetWebsite(),
 	})
 
 }
 
-//保存网站信息
-func WebsiteInfo(c *gin.Context) {
+type SiteInfo struct {
+	Sitename    string `json:"sitename"`
+	Title       string `json:"title"`
+	Keywords    string `json:"keywords"`
+	Description string `json:"description"`
+	Copyright   string `json:"copyright"`
+}
 
-	var data = []string{"sitename", "title", "keywords", "description", "copyright"}
-	for _, v := range data {
-		models.WebsiteSave(v, c.PostForm(v))
+// @Summary 更新网站信息
+// @Description 描述信息
+// @Tags website
+// @Accept  json
+// @Produce  json
+// @Router /website/info [post]
+func WebsiteInfo(c *gin.Context) {
+	req := SiteInfo{}
+	if err := c.ShouldBindJSON(&req); err != nil {
+		color.Red.Println(err)
+	}
+
+	var data = map[string]string{
+		"sitename":    req.Sitename,
+		"title":       req.Title,
+		"keywords":    req.Keywords,
+		"description": req.Description,
+		"copyright":   req.Copyright,
+	}
+
+	for key, value := range data {
+		models.WebsiteSave(key, value)
 	}
 	Services.ClearCache("qy_website")
 	c.JSON(http.StatusOK, gin.H{
-		"status":  200,
+		"status": 200,
+
 		"message": "保存成功",
 	})
 }
