# routes/project.go
@@ -20,10 +20,13 @@ func projectRouter(router *gin.Engine) {
 
 	basicRouter := router.Group("")
 	{
-		basicRouter.POST("/userlogin", controllers.FetchLogin)
+		basicRouter.POST("/login", controllers.FetchLogin)
+
 		basicRouter.GET("/logout", controllers.Logout)
 		basicRouter.POST("/register", controllers.AjaxRegister)
-
+		basicRouter.GET("/getIndex", middleware.JwtHandler(), controllers.Index)
+		//manager 主页
+		basicRouter.GET("/manager/:proid", middleware.JwtHandler(), controllers.Manager)
 		//注册验证
 		basicRouter.POST("/register/check", controllers.RegisterCheck)
 	}
@@ -54,7 +57,7 @@ func projectRouter(router *gin.Engine) {
 		//企业密钥操作
 		apiRouter.POST("/company/operate", manager.CompanyOperate)
 	}
-	projectRouter := router.Group("/project", middleware.Auth())
+	projectRouter := router.Group("/project", middleware.JwtHandler())
 	{
 		//保存项目
 		projectRouter.POST("/info", requests.ProjectVerify(), controllers.ProjectSave)
@@ -64,7 +67,7 @@ func projectRouter(router *gin.Engine) {
 		projectRouter.POST("/envchange", controllers.ProjectEnvChange)
 	}
 	//json路由
-	organizeRouter := router.Group("/organize", middleware.Auth())
+	organizeRouter := router.Group("/organize", middleware.JwtHandler())
 	{
 		//组织搜索
 		organizeRouter.GET("/search/:identify", controllers.Search)
@@ -75,10 +78,12 @@ func projectRouter(router *gin.Engine) {
 		//编辑组织信息
 		organizeRouter.POST("/detail/:oid", controllers.OrganizeSave)
 	}
-	userRouter := router.Group("/users", middleware.Auth())
+	userRouter := router.Group("/users", middleware.JwtHandler())
 	{
+
 		//用户列表
-		userRouter.GET("/all", controllers.AjaxUserList)
+		userRouter.POST("/all", controllers.AjaxUserList)
+		userRouter.POST("/list", controllers.UserList)
 		//用户详情
 		userRouter.POST("/detail/:userid", controllers.UsersSave)
 		//个人资料修改
@@ -86,25 +91,27 @@ func projectRouter(router *gin.Engine) {
 		//个人中心数据检查
 		userRouter.POST("/person/check", controllers.UserPersonCheck)
 	}
-	groupRouter := router.Group("/group", middleware.Auth())
+	groupRouter := router.Group("/group", middleware.JwtHandler())
 	{
+		groupRouter.GET("/list", controllers.GroupList)
 		//编辑权限组
-		groupRouter.POST("/info", controllers.GroupSave)
-		groupRouter.POST("/operate/:gid", controllers.GroupOperate)
+		groupRouter.POST("/create", controllers.GroupSave)
+		groupRouter.POST("/delete/:gid", controllers.GroupDelete)
 		//功能权限
 		groupRouter.POST("/featureAuth/:gid", controllers.GroupfeatureSave)
 		//数据权限
 		groupRouter.POST("/dataAuth/:gid", controllers.GroupdataAuthSave)
 		//获取权限组
-		groupRouter.GET("/all", controllers.AjaxGroup)
+		groupRouter.GET("/all", controllers.AjaxGroupList)
 	}
 	logRouter := router.Group("/log", middleware.Auth())
 	{
 		//获取日志列表数据
 		logRouter.GET("/all", controllers.AjaxOperateLog)
 	}
-	websiteRouter := router.Group("/website", middleware.Auth())
+	websiteRouter := router.Group("/website", middleware.JwtHandler())
 	{
+		websiteRouter.GET("/web", controllers.Website)
 		//网站设置
 		websiteRouter.POST("/info", controllers.WebsiteInfo)
 	}
@@ -116,7 +123,7 @@ func projectRouter(router *gin.Engine) {
 	messageRouter := router.Group("/message", middleware.Auth())
 	{
 		//消息列表
-		messageRouter.GET("", controllers.GetAjaxMessageList)
+		messageRouter.GET("/list", controllers.GetAjaxMessageList)
 		//消息操作
 		messageRouter.POST("/operate", controllers.MessageOperate)
 		//获取未读消息数
@@ -130,6 +137,8 @@ func projectRouter(router *gin.Engine) {
 		helpRouter.POST("/operate", controllers.HelpDelete)
 		//帮助中心文章保存
 		helpRouter.POST("/store", controllers.HelpStore)
+		//新增帮助
+		helpRouter.GET("/info", controllers.HelpInfo)
 	}
 	uploadRouter := router.Group("/uploads", middleware.Auth())
 	{
